Fix overflow

--- a/plotly-app/assets/style.css
+++ b/plotly-app/assets/style.css
@@ -4,6 +4,7 @@
 
 html {
   overflow-y: hidden;
+  overflow-x: hidden;
 }
 
 .section {
